clusters/local/modules/kyverno-policies/policies/require_labels/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    my.io/foo: bar
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    product: perpetual
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    product: perpetual
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12
